<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="3">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="0.3"
        android:weightSum="1"
        android:orientation="horizontal">

    <TextView
        android:layout_width="0dip"
        android:layout_height="match_parent"
        android:layout_weight="0.5"
        android:textSize="15dip"
        android:layout_marginRight="10dip"
        android:textStyle="bold"
        android:gravity="right|center_vertical"
        android:text="@string/lbl_subscribStatus"
        >
    </TextView>
        <TextView
            android:id="@+id/txtviewSub"
            android:layout_width="0dip"
            android:textSize="15dip"
            android:textColor="@color/colorAccent"
            android:layout_height="match_parent"
            android:gravity="left|center_vertical"
            android:layout_weight="0.5">
        </TextView>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:weightSum="3"
        android:orientation="vertical">
        <Button
            android:id="@+id/subScription"
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="1"
            android:visibility="gone"
            android:text="@string/lbl_subscription"
            >
        </Button>
        <Button
            android:id="@+id/cancleSubscription"
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:text="@string/lbl_cancleSubscription"
            android:visibility="gone"
            android:layout_weight="1">
        </Button>
        <Button
            android:id="@+id/resumeSubscriptin"
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:text="@string/lbl_resumeSubscription"
            android:visibility="gone"
            android:layout_weight="1">
        </Button>


    </LinearLayout>



</LinearLayout>